--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<title>Vite App</title>
 	</head>
 	<body>
+
+		<!-- HEADER -->
 		<header class="w-full bg-[#F1F3FF] py-4 fixed top-0 shadow-md">
 			<div class="max-w-7xl mx-auto px-4 sm:px-6">
 				<div class="flex justify-between items-center border-gray-100 md:justify-between md:space-x-10">
@@ -36,7 +38,7 @@
 						</nav>
 						<div class="items-center justify-end">
 							<!-- <a href="#" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900"> Sign in </a> -->
-							<a href="#" class="ml-5 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-bold text-white bg-lime-4 hover:bg-lime-5 focus:ring-lime-4 focus:ring-offset-2 focus:ring-2 focus:outline-none"> Register </a>
+							<a href="#" class="ml-5 btn"> Register </a>
 						</div>
 					</div>
 				</div>
@@ -100,6 +102,25 @@
 				</div>
 			</div>
 		</header>
+
+		<!-- SECTION 1 -->
+		<section class="h-[700px] max-h-screen w-screen bg-[#F1F3FF]">
+			<div class="max-w-7xl h-full flex relative justify-center items-center px-4 md:justify-start mx-auto">
+				<div class="flex flex-col gap-2 z-[1] md:w-1/2">
+					<h1 class="font-bold text-2xl">Sewa & Rental Mobil Terbaik di kawasan (Lokasimu)</h1>
+					<p class="text-sm">Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
+					<div>
+						<button class="btn">Mulai Sewa Mobil</button>
+					</div>
+				</div>
+				<div class="absolute top-0 left-0 w-full h-full z-[0]">
+					<div class="absolute bg-dark-blue-4 w-3/4 md:w-1/2 right-0 h-16 md:h-1/3 bottom-0 rounded-tl-3xl">
+
+					</div>
+					<img src="./src/img/car.png" alt="Mobil" class="absolute bottom-0 w-1/2 right-6 md:right-0 md:top-1/2">
+				</div>
+			</div>
+		</section>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
