--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 
 		<!-- HEADER -->
-		<header class="w-full bg-[#F1F3FF] py-4 fixed top-0 shadow-md">
+		<header class="w-full bg-[#F1F3FF] py-4 fixed top-0 shadow-md z-40">
 			<div class="max-w-7xl mx-auto px-4 sm:px-6">
 				<div class="flex justify-between items-center border-gray-100 md:justify-between md:space-x-10">
 				  <div class="flex justify-start lg:w-0 lg:flex-1">
@@ -104,7 +104,7 @@
 		</header>
 
 		<!-- SECTION 1 -->
-		<section class="h-[700px] max-h-screen w-screen bg-[#F1F3FF]">
+		<section class="h-section w-screen bg-[#F1F3FF]">
 			<div class="max-w-7xl h-full flex relative justify-center items-center px-4 md:justify-start mx-auto">
 				<div class="flex flex-col gap-2 z-[1] md:w-1/2">
 					<h1 class="font-bold text-2xl">Sewa & Rental Mobil Terbaik di kawasan (Lokasimu)</h1>
@@ -118,6 +118,26 @@
 
 					</div>
 					<img src="./src/img/car.png" alt="Mobil" class="absolute bottom-0 w-1/2 right-6 md:right-0 md:top-1/2">
+				</div>
+			</div>
+		</section>
+
+		<!-- SECTION 2 -->
+		<section class="h-section w-screen bg-white">
+			<div class="max-w-7xl mx-auto flex flex-col md:flex-row py-8 gap-4 px-8 h-full">
+				<div class="flex justify-center md:w-1/2 md:flex-shrink-0 md:items-center">
+					<img src="./src/img/img_service.png" alt="Our Services" class="w-24 object-cover md:w-3/4 bg-auto">
+				</div>
+				<div class="flex flex-col md:justify-center">
+					<h1 class="font-bold text-xl text-center">Best Car Rental for any kind of trip in (Lokasimu)!</h1>
+					<p class="text-center text-sm">Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain, kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding, meeting, dll.</p>
+					<ul class="text-sm mt-4 list-check">
+						<li>Sewa Mobil Dengan Supir di Bali 12 Jam</li>
+						<li>Sewa Mobil Lepas Kunci di Bali 24 Jam</li>
+						<li>Sewa Mobil Jangka Panjang Bulanan</li>
+						<li>Gratis Antar - Jemput Mobil di Bandara</li>
+						<li>Layanan Airport Transfer / Drop In Out</li>
+					</ul>
 				</div>
 			</div>
 		</section>
