--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		</header>
 
 		<!-- SECTION 1 -->
-		<section class="h-section w-screen bg-[#F1F3FF]">
+		<section class="h-screen lg:h-[700px] w-screen bg-[#F1F3FF]">
 			<div class="max-w-7xl h-full flex relative justify-center items-center px-4 md:justify-start mx-auto">
 				<div class="flex flex-col gap-2 z-[1] md:w-1/2">
 					<h1 class="font-bold text-2xl">Sewa & Rental Mobil Terbaik di kawasan (Lokasimu)</h1>
@@ -129,8 +129,8 @@
 					<img src="./src/img/img_service.png" alt="Our Services" class="w-24 object-cover md:w-3/4 bg-auto">
 				</div>
 				<div class="flex flex-col md:justify-center">
-					<h1 class="font-bold text-xl text-center">Best Car Rental for any kind of trip in (Lokasimu)!</h1>
-					<p class="text-center text-sm">Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain, kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding, meeting, dll.</p>
+					<h1 class="font-bold text-xl text-center md:text-left">Best Car Rental for any kind of trip in (Lokasimu)!</h1>
+					<p class="text-center text-sm md:text-left">Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga lebih murah dibandingkan yang lain, kondisi mobil baru, serta kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding, meeting, dll.</p>
 					<ul class="text-sm mt-4 list-check">
 						<li>Sewa Mobil Dengan Supir di Bali 12 Jam</li>
 						<li>Sewa Mobil Lepas Kunci di Bali 24 Jam</li>
@@ -138,6 +138,49 @@
 						<li>Gratis Antar - Jemput Mobil di Bandara</li>
 						<li>Layanan Airport Transfer / Drop In Out</li>
 					</ul>
+				</div>
+			</div>
+		</section>
+
+		<!-- SECTION 3 -->
+		<section class="h-section w-screen bg-white">
+			<div class="max-w-7xl mx-auto flex flex-col py-8 px-8 h-full">
+				<h1 class="font-bold text-xl text-center md:text-left">Why Us</h1>
+				<p class="text-sm text-center md:text-left">Mengapa harus pilih Binar Car Rental?</p>
+
+				<div class="gap-2 mt-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:gap-4 xl:gap-8">
+					<div class="why-us-item">
+						<span class="w-10 h-10 bg-alert-warning rounded-full flex items-center justify-center text-white">
+							<i data-feather="thumbs-up"></i>
+						</span>
+
+						<h3 class="font-semibold">Mobil Lengkap</h3>
+						<p class="text-sm font-light">Tersedia banyak pilihan mobil, kondisi masih baru, bersih dan terawat</p>
+					</div>
+					<div class="why-us-item">
+						<span class="w-10 h-10 bg-alert-danger rounded-full flex items-center justify-center text-white">
+							<i data-feather="tag"></i>
+						</span>
+
+						<h3 class="font-semibold">Harga Murah</h3>
+						<p class="text-sm font-light">Harga murah dan bersaing, bisa bandingkan harga kami dengan rental mobil lain</p>
+					</div>
+					<div class="why-us-item">
+						<span class="w-10 h-10 bg-dark-blue-4 rounded-full flex items-center justify-center text-white">
+							<i data-feather="clock"></i>
+						</span>
+
+						<h3 class="font-semibold">Layanan 24 Jam</h3>
+						<p class="text-sm font-light">Siap melayani kebutuhan Anda selama 24 jam nonstop. Kami juga tersedia di akhir minggu</p>
+					</div>
+					<div class="why-us-item">
+						<span class="w-10 h-10 bg-lime-4 rounded-full flex items-center justify-center text-white">
+							<i data-feather="award"></i>
+						</span>
+
+						<h3 class="font-semibold">Sopir Profesional</h3>
+						<p class="text-sm font-light">Sopir yang profesional, berpengalaman, jujur, ramah dan selalu tepat waktu</p>
+					</div>
 				</div>
 			</div>
 		</section>
