--- a/index.html
+++ b/index.html
@@ -184,6 +184,220 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- SECTION 4 -->
+		<section class="h-section w-screen bg-white">
+			<div class="mx-auto flex flex-col py-8 px-8 h-full">
+				<h1 class="max-w-7xl mx-auto font-bold text-xl text-center">Testimonial</h1>
+				<p class="max-w-7xl mx-auto text-sm text-center">Berbagai review positif dari para pelanggan kami</p>
+
+				<!-- CAROUSEL -->
+				<div class="relative h-72 md:h-64 w-full mt-8 overflow-visible">
+					<div class="absolute h-full top-0 -left-8 right-0 w-screen overflow-hidden flex" id="figure-container">
+						<div class="w-auto flex transform -translate-x-[calc(100vw-3.1rem)] md:-translate-x-[33rem]">
+							<figure class="h-72 md:h-64 z-[2] px-4">
+								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
+									<div class="flex justify-center">
+										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+									</div>
+									<div class="flex flex-col items-center gap-2">
+										<!-- rating -->
+										<div class="flex">
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+										</div>
+										<p class="text-sm">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+										<p class="font-semibold text-sm text-left w-full">John Dee 32, Bromo</p>
+									</div>
+								</div>
+							</figure>
+							<figure class="h-72 md:h-64 z-[2] px-4">
+								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
+									<div class="flex justify-center">
+										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+									</div>
+									<div class="flex flex-col items-center gap-2">
+										<!-- rating -->
+										<div class="flex">
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+										</div>
+										<p class="text-sm">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+										<p class="font-semibold text-sm text-left w-full">John Dee 32, Bromo</p>
+									</div>
+								</div>
+							</figure>
+							<figure class="h-72 md:h-64 z-[2] px-4">
+								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
+									<div class="flex justify-center">
+										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+									</div>
+									<div class="flex flex-col items-center gap-2">
+										<!-- rating -->
+										<div class="flex">
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+										</div>
+										<p class="text-sm">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+										<p class="font-semibold text-sm text-left w-full">John Dee 32, Bromo</p>
+									</div>
+								</div>
+							</figure>
+							<figure class="h-72 md:h-64 z-[2] px-4">
+								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
+									<div class="flex justify-center">
+										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+									</div>
+									<div class="flex flex-col items-center gap-2">
+										<!-- rating -->
+										<div class="flex">
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+										</div>
+										<p class="text-sm">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+										<p class="font-semibold text-sm text-left w-full">John Dee 32, Bromo</p>
+									</div>
+								</div>
+							</figure>
+							<figure class="h-72 md:h-64 z-[2] px-4">
+								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
+									<div class="flex justify-center">
+										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+									</div>
+									<div class="flex flex-col items-center gap-2">
+										<!-- rating -->
+										<div class="flex">
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+										</div>
+										<p class="text-sm">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+										<p class="font-semibold text-sm text-left w-full">John Dee 32, Bromo</p>
+									</div>
+								</div>
+							</figure>
+							<figure class="h-72 md:h-64 z-[2] px-4">
+								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
+									<div class="flex justify-center">
+										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+									</div>
+									<div class="flex flex-col items-center gap-2">
+										<!-- rating -->
+										<div class="flex">
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+										</div>
+										<p class="text-sm">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+										<p class="font-semibold text-sm text-left w-full">John Dee 32, Bromo</p>
+									</div>
+								</div>
+							</figure>
+							<figure class="h-72 md:h-64 z-[2] px-4">
+								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
+									<div class="flex justify-center">
+										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+									</div>
+									<div class="flex flex-col items-center gap-2">
+										<!-- rating -->
+										<div class="flex">
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+										</div>
+										<p class="text-sm">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+										<p class="font-semibold text-sm text-left w-full">John Dee 32, Bromo</p>
+									</div>
+								</div>
+							</figure>
+							<figure class="h-72 md:h-64 z-[2] px-4">
+								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
+									<div class="flex justify-center">
+										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+									</div>
+									<div class="flex flex-col items-center gap-2">
+										<!-- rating -->
+										<div class="flex">
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+										</div>
+										<p class="text-sm">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+										<p class="font-semibold text-sm text-left w-full">John Dee 32, Bromo</p>
+									</div>
+								</div>
+							</figure>
+							<figure class="h-72 md:h-64 z-[2] px-4">
+								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
+									<div class="flex justify-center">
+										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+									</div>
+									<div class="flex flex-col items-center gap-2">
+										<!-- rating -->
+										<div class="flex">
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+										</div>
+										<p class="text-sm">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+										<p class="font-semibold text-sm text-left w-full">John Dee 32, Bromo</p>
+									</div>
+								</div>
+							</figure>
+							<figure class="h-72 md:h-64 z-[2] px-4">
+								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
+									<div class="flex justify-center">
+										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+									</div>
+									<div class="flex flex-col items-center gap-2">
+										<!-- rating -->
+										<div class="flex">
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+											<i class="star"></i>
+										</div>
+										<p class="text-sm">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod”</p>
+										<p class="font-semibold text-sm text-left w-full">John Dee 32, Bromo</p>
+									</div>
+								</div>
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="flex justify-center gap-4 mt-4">
+					<button class="w-8 h-8 rounded-full border border-[#C4C4C4] text-[#222222] carousel-control-active" id="carousel-left">
+						<i data-feather="chevron-left" class="ml-0.5"></i>
+					</button>
+					<button class="w-8 h-8 rounded-full border border-[#C4C4C4] text-[#222222]" id="carousel-right">
+						<i data-feather="chevron-right" class="ml-1"></i>
+					</button>
+				</div>
+			</div>
+		</section>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
