--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-x-hidden">
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vite App</title>
 	</head>
-	<body>
+	<body class="overflow-x-hidden">
 
 		<!-- HEADER -->
 		<header class="w-full bg-[#F1F3FF] py-4 fixed top-0 shadow-md z-40">
@@ -194,11 +194,11 @@
 				<!-- CAROUSEL -->
 				<div class="relative h-72 md:h-64 w-full mt-8 overflow-visible">
 					<div class="absolute h-full top-0 -left-8 right-0 w-screen overflow-hidden flex" id="figure-container">
-						<div class="w-auto flex transform -translate-x-[calc(100vw-3.1rem)] md:-translate-x-[33rem]">
-							<figure class="h-72 md:h-64 z-[2] px-4">
+						<div class="w-auto flex transform -translate-x-[calc(100vw-3.1rem)] md:-translate-x-[76rem]">
+							<figure class="h-72 md:h-64 z-[2] px-4 transform">
 								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
 									<div class="flex justify-center">
-										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+										<img src="https://i.pravatar.cc/300?r=1" alt="orang" class="w-16 h-16 rounded-full">
 									</div>
 									<div class="flex flex-col items-center gap-2">
 										<!-- rating -->
@@ -214,10 +214,10 @@
 									</div>
 								</div>
 							</figure>
-							<figure class="h-72 md:h-64 z-[2] px-4">
+							<figure class="h-72 md:h-64 z-[2] px-4 transform">
 								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
 									<div class="flex justify-center">
-										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+										<img src="https://i.pravatar.cc/300?r=2" alt="orang" class="w-16 h-16 rounded-full">
 									</div>
 									<div class="flex flex-col items-center gap-2">
 										<!-- rating -->
@@ -233,10 +233,10 @@
 									</div>
 								</div>
 							</figure>
-							<figure class="h-72 md:h-64 z-[2] px-4">
+							<figure class="h-72 md:h-64 z-[2] px-4 transform">
 								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
 									<div class="flex justify-center">
-										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+										<img src="https://i.pravatar.cc/300?r=3" alt="orang" class="w-16 h-16 rounded-full">
 									</div>
 									<div class="flex flex-col items-center gap-2">
 										<!-- rating -->
@@ -252,10 +252,10 @@
 									</div>
 								</div>
 							</figure>
-							<figure class="h-72 md:h-64 z-[2] px-4">
+							<figure class="h-72 md:h-64 z-[2] px-4 transform">
 								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
 									<div class="flex justify-center">
-										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+										<img src="https://i.pravatar.cc/300?r=4" alt="orang" class="w-16 h-16 rounded-full">
 									</div>
 									<div class="flex flex-col items-center gap-2">
 										<!-- rating -->
@@ -271,10 +271,10 @@
 									</div>
 								</div>
 							</figure>
-							<figure class="h-72 md:h-64 z-[2] px-4">
+							<figure class="h-72 md:h-64 z-[2] px-4 transform">
 								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
 									<div class="flex justify-center">
-										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+										<img src="https://i.pravatar.cc/300?r=5" alt="orang" class="w-16 h-16 rounded-full">
 									</div>
 									<div class="flex flex-col items-center gap-2">
 										<!-- rating -->
@@ -290,10 +290,10 @@
 									</div>
 								</div>
 							</figure>
-							<figure class="h-72 md:h-64 z-[2] px-4">
+							<figure class="h-72 md:h-64 z-[2] px-4 transform">
 								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
 									<div class="flex justify-center">
-										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+										<img src="https://i.pravatar.cc/300?r=6" alt="orang" class="w-16 h-16 rounded-full">
 									</div>
 									<div class="flex flex-col items-center gap-2">
 										<!-- rating -->
@@ -309,10 +309,10 @@
 									</div>
 								</div>
 							</figure>
-							<figure class="h-72 md:h-64 z-[2] px-4">
+							<figure class="h-72 md:h-64 z-[2] px-4 transform">
 								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
 									<div class="flex justify-center">
-										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+										<img src="https://i.pravatar.cc/300?r=7" alt="orang" class="w-16 h-16 rounded-full">
 									</div>
 									<div class="flex flex-col items-center gap-2">
 										<!-- rating -->
@@ -328,10 +328,10 @@
 									</div>
 								</div>
 							</figure>
-							<figure class="h-72 md:h-64 z-[2] px-4">
+							<figure class="h-72 md:h-64 z-[2] px-4 transform">
 								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
 									<div class="flex justify-center">
-										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+										<img src="https://i.pravatar.cc/300?r=8" alt="orang" class="w-16 h-16 rounded-full">
 									</div>
 									<div class="flex flex-col items-center gap-2">
 										<!-- rating -->
@@ -347,10 +347,10 @@
 									</div>
 								</div>
 							</figure>
-							<figure class="h-72 md:h-64 z-[2] px-4">
+							<figure class="h-72 md:h-64 z-[2] px-4 transform">
 								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
 									<div class="flex justify-center">
-										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+										<img src="https://i.pravatar.cc/300?r=9" alt="orang" class="w-16 h-16 rounded-full">
 									</div>
 									<div class="flex flex-col items-center gap-2">
 										<!-- rating -->
@@ -366,10 +366,10 @@
 									</div>
 								</div>
 							</figure>
-							<figure class="h-72 md:h-64 z-[2] px-4">
+							<figure class="h-72 md:h-64 z-[2] px-4 transform">
 								<div class="relative flex flex-col gap-2 p-4 bg-[#F1F3FF] rounded-xl w-[calc(100vw-4rem)] md:w-[36rem] md:flex-shrink-0">
 									<div class="flex justify-center">
-										<img src="https://i.pravatar.cc/300" alt="orang" class="w-16 h-16 rounded-full">
+										<img src="https://i.pravatar.cc/300?r=10" alt="orang" class="w-16 h-16 rounded-full">
 									</div>
 									<div class="flex flex-col items-center gap-2">
 										<!-- rating -->
