--- a/index.html
+++ b/index.html
@@ -398,6 +398,129 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- SECTION 5 -->
+		<section class="h-section w-screen bg-white py-8 lg:px-8">
+			<div class="max-w-7xl mx-auto flex flex-col py-8 px-8 h-full bg-dark-blue-4 text-center items-center text-white	gap-6 lg:rounded-xl">
+				<h1 class="text-2xl font-bold text-white">Sewa Mobil di (Lokasimu) Sekarang</h1>
+				<p class="text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+				<div>
+					<button class="btn text-sm">Mulai Sewa Mobil</button>
+				</div>
+			</div>
+		</section>
+
+		<!-- SECTION 6 -->
+		<section class="h-section w-screen bg-white">
+			<div class="max-w-7xl mx-auto flex flex-col md:flex-row py-8 gap-4 px-8 h-full">
+				<div class="flex justify-center md:w-1/2 md:flex-shrink-0 flex-col">
+					<h1 class="text-2xl font-bold">Frequently Asked Question</h1>
+					<p class="text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				</div>
+				<div class="flex flex-col md:justify-center">
+					<div class="accordion" id="accordionExample">
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingOne">
+							  <button class="accordion-button collapsed text-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+								Apa saja syarat yang dibutuhkan?
+							  </button>
+							</h2>
+							<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+							  <div class="accordion-body text-sm">
+								  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							  </div>
+							</div>
+						</div>
+						<div class="accordion-item">
+						  <h2 class="accordion-header" id="headingTwo">
+							<button class="accordion-button collapsed text-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								Berapa hari minimal sewa mobil lepas kunci?
+							</button>
+						  </h2>
+						  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+							<div class="accordion-body text-sm">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							</div>
+						  </div>
+						</div>
+						<div class="accordion-item">
+						  <h2 class="accordion-header" id="headingThree">
+							<button class="accordion-button collapsed text-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+								Berapa hari sebelumnya sabaiknya booking sewa mobil?
+							</button>
+						  </h2>
+						  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+							<div class="accordion-body text-sm">
+							  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							</div>
+						  </div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingFour">
+							  <button class="accordion-button collapsed text-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+								Apakah Ada biaya antar-jemput?
+							  </button>
+							</h2>
+							<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+							  <div class="accordion-body text-sm">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							  </div>
+							</div>
+						</div>
+						<div class="accordion-item">
+							<h2 class="accordion-header" id="headingFive">
+								<button class="accordion-button collapsed text-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+									Bagaimana jika terjadi kecelakaan
+								</button>
+							</h2>
+							<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+								<div class="accordion-body text-sm">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<footer class="w-screen text-xs">
+			<div class="max-w-7xl mx-auto grid grid-cols-1 py-8 gap-4 px-8 md:grid-cols-4">
+				<div class="flex flex-col font-light gap-2 text-center text-">
+					<p>Jalan Suroyo No. 161 Mayangan Kota Probolonggo 672000</p>
+					<p>binarcarrental@gmail.com</p>
+					<p>081-233-334-808</p>
+				</div>
+
+				<div class="flex justify-between md:flex-col md:items-center md:text-center">
+					<p>Our services</p>
+					<p>Why Us</p>
+					<p>Testimonial</p>
+					<p>FAQ</p>
+				</div>
+
+				<div class="flex flex-col gap-4 mt-6">
+					<p class="text-center ">Connect with us</p>
+					<div class="flex justify-center gap-2">
+						<div class="w-8 h-8 rounded-full bg-dark-blue-4 text-white flex items-center justify-center"><i data-feather="facebook" class="w-5"></i></div>
+						<div class="w-8 h-8 rounded-full bg-dark-blue-4 text-white flex items-center justify-center"><i data-feather="instagram" class="w-5"></i></div>
+						<div class="w-8 h-8 rounded-full bg-dark-blue-4 text-white flex items-center justify-center"><i data-feather="twitter" class="w-5"></i></div>
+						<div class="w-8 h-8 rounded-full bg-dark-blue-4 text-white flex items-center justify-center"><i data-feather="mail" class="w-5"></i></div>
+						<div class="w-8 h-8 rounded-full bg-dark-blue-4 text-white flex items-center justify-center"><i data-feather="twitch" class="w-5"></i></div>
+					</div>
+				</div>
+
+				<div class="flex flex-col gap-2 mt-6">
+					<p class="text-center">Copyright Binar 2022</p>
+					<div>
+						<div class="mx-auto w-16 h-6 bg-dark-blue-4"></div>
+					</div>
+				</div>
+			</div>
+		</footer>
+
 		<script type="module" src="/main.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 	</body>
 </html>
